# aspire-dapr

./: .gitignore  aspire.config.json
AspireWithDapr.AppHost/: AspireWithDapr.AppHost.csproj  Program.cs
AspireWithDapr.ServiceA/: AspireWithDapr.ServiceA.csproj  Program.cs
AspireWithDapr.ServiceB/: AspireWithDapr.ServiceB.csproj  Program.cs
AspireWithDapr.WebUI/: AspireWithDapr.WebUI.csproj
apphost/: apphost.cs
python/python-app1/: main.py  pyproject.toml
python/python-app2/: README.md  main.py  pyproject.toml
