[project]
name = "python-app2"
version = "0.1.0"
description = "A sample FastAPI app served by Uvicorn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0"
]
scripts = {
    start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
}
